tests/saved_state_parallel_decompress/saved_state_parallel_decompress.exp
Initial status (should have no errors):
No errors!

The Flow server is currently in lazy mode and is only checking 1/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
After reinit (should have type error):
Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `dep` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:4:2
   4| (dep: string);
       ^^^

References:
   dep.js:3:16
   3| export default 123;
                     ^^^ [1]
   test.js:4:7
   4| (dep: string);
            ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
